--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "launchwebds-restaurant",
+  "name": "launchweb-restaurant-psite",
   "version": "1.0.0",
-  "description": "Portfolio restaurant site with Stripe integration",
+  "description": "Restaurant website",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "ejs": "^3.1.8",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "stripe": "^11.0.0"
+    "stripe": "^12.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
